--- a/Service.html
+++ b/Service.html
@@ -1480,7 +1480,7 @@
                     <h4>What We Do:</h4>
                     <ul class="what-list">
                         <li>Provide unpacking assistance</li>
-                        <li>Handle material回收</li>
+                        <li>Handle materials</li>
                         <li>Address any concerns</li>
                     </ul>
                     
