--- a/Service.html
+++ b/Service.html
@@ -1919,7 +1919,7 @@
                                 <p>Disassembly/reassembly, felt padding, and custom packaging</p>
                             </div>
                             <div class="specialty-item">
-                                <i class="fas fa-piano"></i>
+                                <i class="fas fa-guitar"></i>
                                 <h4>Instruments</h4>
                                 <p>Climate-controlled transport and specialized handling</p>
                             </div>
