--- a/index.html
+++ b/index.html
@@ -1481,9 +1481,7 @@ One suggestion, please try open your service to other cities as well.
                 </ul>
             </div>
             <div class="footer-links">
-                <h3>Our Services</h3>
-                <ul>
-                <li>Residential Moving</a></li> <li>Commercial Moving</a></li> <li>Packing Services</a></li> <li>Storage Solutions</a></li>  </ul> </div> <div class="footer-contact"> <h3>Contact Us</h3> <p><i class="fas fa-map-marker-alt"></i> B/09, 1st Floor, Hari Darshan Shopping Center, Mony Hotel Rd, Isanpur, Ahmedabad, Gujarat 382405</p> <p><i class="fas fa-phone"></i> +91 75749 41313</p> <p><i class="fas fa-envelope"></i> hello@gnrelocation.in</p> <p><i class="fas fa-clock"></i> Mon-Sun: 10:00 AM - 9:00 PM</p> </div> </div> <div class="footer-bottom"> <p>&copy; 2025 Gurunanak Relocation. All Rights Reserved. </div> 
+                <h3>Contact Us</h3> <p><i class="fas fa-map-marker-alt"></i> B/09, 1st Floor, Hari Darshan Shopping Center, Mony Hotel Rd, Isanpur, Ahmedabad, Gujarat 382405</p> <p><i class="fas fa-phone"></i> +91 75749 41313</p> <p><i class="fas fa-envelope"></i> hello@gnrelocation.in</p> <p><i class="fas fa-clock"></i> Mon-Sun: 10:00 AM - 9:00 PM</p> </div> </div> <div class="footer-bottom"> <p>&copy; 2025 Gurunanak Relocation. All Rights Reserved. </div> 
     </footer>
 <!-- Back to Top Button -->
 <div class="back-to-top" id="backToTop">
