--- a/AboutUs.html
+++ b/AboutUs.html
@@ -828,16 +828,16 @@
     <!-- Header -->
     <header id="header">
         <div class="header-container">
-            <a href="index.html" class="logo">
+            <a href="/index" class="logo">
                 <img src="logo.svg" alt="Gurunanak Relocation Logo" class="logo-image">
                 <div class="logo-text">Gurunanak <span>Relocation</span></div>
             </a>
             <nav id="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Service.html">Services</a></li>
-                    <li><a href="AboutUs.html" style="color: var(--primary);">About Us</a></li>
-                    <li><a href="Contactus.html">Contact</a></li>
+               <ul>
+                    <li><a href="/index" active>Home</a></li>
+                    <li><a href="/service">Services</a></li>
+                    <li><a href="/aboutus">About Us</a></li>
+                    <li><a href="/contactus">Contact</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu" id="mobileMenu">
@@ -1160,7 +1160,7 @@
             <a href="tel:+919913609060"><span class="contact-phone"><i class="fas fa-phone"></i> +91 75749 41313</span><br></a>
             <a href="mailto:hello@gnrelocation.in"><span class="contact-email"><i class="fas fa-envelope"></i> hello@gnrelocation.in</span></a>
         </div>
-        <button class="cta-button" onclick="window.location.href='Contactus.html'"><i class="fas fa-paper-plane"></i> Request a Quote</button>
+        <button class="cta-button" onclick="window.location.href='/contactus'"><i class="fas fa-paper-plane"></i> Request a Quote</button>
         <div style="margin-top:1.5rem;color:var(--secondary);font-weight:500;">
             Rest assured of our best service at all times.
         </div>
@@ -1179,12 +1179,11 @@
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Service.html">Services</a></li>
-                    <li><a href="AboutUs.html">About Us</a></li>
-
-                    <li><a href="Contactus.html">Contact</a></li>
+               <ul>
+                    <li><a href="/index" active>Home</a></li>
+                    <li><a href="/service">Services</a></li>
+                    <li><a href="/aboutus">About Us</a></li>
+                    <li><a href="/contactus">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-links">
