--- a/AboutUs.html
+++ b/AboutUs.html
@@ -828,16 +828,16 @@
     <!-- Header -->
     <header id="header">
         <div class="header-container">
-            <a href="/index" class="logo">
+            <a href="index.html" class="logo">
                 <img src="logo.svg" alt="Gurunanak Relocation Logo" class="logo-image">
                 <div class="logo-text">Gurunanak <span>Relocation</span></div>
             </a>
             <nav id="nav">
                <ul>
-                    <li><a href="/index" active>Home</a></li>
-                    <li><a href="/service">Services</a></li>
-                    <li><a href="/aboutus">About Us</a></li>
-                    <li><a href="/contactus">Contact</a></li>
+                    <li><a href="index.html" active>Home</a></li>
+                    <li><a href="Service.html">Services</a></li>
+                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="Contactus.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu" id="mobileMenu">
@@ -1179,11 +1179,11 @@
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
-               <ul>
-                    <li><a href="/index" active>Home</a></li>
-                    <li><a href="/service">Services</a></li>
-                    <li><a href="/aboutus">About Us</a></li>
-                    <li><a href="/contactus">Contact</a></li>
+              <ul>
+                    <li><a href="index.html" active>Home</a></li>
+                    <li><a href="Service.html">Services</a></li>
+                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="Contactus.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-links">
