--- a/index.html
+++ b/index.html
@@ -906,10 +906,10 @@
             </a>
             <nav id="nav">
                 <ul>
-                    <li><a href="/index" active>Home</a></li>
-                    <li><a href="/service">Services</a></li>
-                    <li><a href="/aboutus">About Us</a></li>
-                    <li><a href="/contactus">Contact</a></li>
+                    <li><a href="index.html" active>Home</a></li>
+                    <li><a href="Service.html">Services</a></li>
+                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="Contactus.html">Contact</a></li>
                 </ul>
             </nav>
             <!-- Removed Get a Quote button -->
@@ -1471,11 +1471,11 @@ One suggestion, please try open your service to other cities as well.
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="/index">Home</a></li>
-                    <li><a href="/service">Services</a></li>
-                    <li><a href="/aboutus">About Us</a></li>
-                    <li><a href="/contactus">Contact</a></li>
+               <ul>
+                    <li><a href="index.html" active>Home</a></li>
+                    <li><a href="Service.html">Services</a></li>
+                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="Contactus.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-links">
