--- a/Contactus.html
+++ b/Contactus.html
@@ -988,5 +988,14 @@
 });
     </script>
 </body>
+<script>
+if (window.history && window.history.pushState) {
+  let path = window.location.pathname;
+  if (path.endsWith(".html")) {
+    let cleanPath = path.replace(/\.html$/, "");
+    window.history.replaceState({}, document.title, cleanPath);
+  }
+}
+</script>
 
 </html>
